<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="head">Enjoy The Taste Ride By  Taking  a Sip</string>
    <string name="name">Name</string>
    <string name="number">Contact Number</string>
    <string name="topping">Toppings</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
</resources>
